fixed the alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -105,7 +105,7 @@ ul{
 }
 
 #masthead{
-	//height: 156px;
+	height: auto;
 	padding: 35px 0px 40px;
 	background: #ec6d46; /* Old browsers */
 	background: -moz-linear-gradient(top, #ec6d46 0%, #ec6d46 0%, #ec6d46 0%, #f69656 100%); /* FF3.6+ */
